# kassenwart

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  editor.c  functions.lua  input-test.c  main.c  test.csv  test.txt  test2.txt  test3.txt  trie-test.c
scratchpad/: curses.c  input.c  lua.c  readlog.c
src/: editor.c  editor.h  field.rs  formula.rs  input.c  input.h  main.rs  modes.h  raw.c  raw.h  sheet.rs  trie.c  trie.h  u8.c  u8.h  ui.c  ui.h  ui_table.rs  utils.c  utils.h
